--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-sphinx>=3.5.4
-numpydoc>=1.1.0
-jupyter_sphinx>=0.3.2
-pydata_sphinx_theme>=0.6.1
-nbsphinx>=0.8.4
-myst-parser>=0.16.1
+sphinx==3.5.4
+numpydoc==1.1.0
+jupyter_sphinx==0.3.2
+pydata_sphinx_theme==0.6.1
+nbsphinx==0.8.4
+myst-parser==0.16.1
+jinja2<3.1
